--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,8 @@
 [alias]
 	c = commit -am
-	up = pull
-	p = push
-	s = status -s
+	d = pull
+	u = push
+	s = status
 	df = diff --color --color-words --abbrev
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
 [color]
