--- a/.gitconfig
+++ b/.gitconfig
@@ -25,23 +25,9 @@
 	untracked = cyan
 [merge]
 	log = true
-[url "git@github.com:"]
-	insteadOf = "gh:"
-	pushInsteadOf = "github:"
-	pushInsteadOf = "git://github.com/"
-[url "git://github.com/"]
-	insteadOf = "github:"
-[url "git@gist.github.com:"]
-	insteadOf = "gst:"
-	pushInsteadOf = "gist:"
-	pushInsteadOf = "git://gist.github.com/"
-[url "git://gist.github.com/"]
-	insteadOf = "gist:"
-
-# Any GitHub repo with my username should be checked out r/w by default
-# http://rentzsch.tumblr.com/post/564806957/public-but-hackable-git-submodules
-[url "git@github.com:joegreen/"]
-	insteadOf = "git://github.com/joegreen/"
-  
 [push]
 	default = simple
+[user]
+        name = Joe Green
+        email = joe.green0991@gmail.com
+
